// =====================================================================
//  EduFun — مخطّط قاعدة البيانات (DBML)
//  للعرض على: https://dbdiagram.io
//  قاعدة البيانات: MySQL / MariaDB (XAMPP)
//  Charset: utf8mb4 / utf8mb4_unicode_ci
// =====================================================================

// ---------------------------------------------------------------
//  Project Definition
// ---------------------------------------------------------------
Project EduFun {
  note: '''تطبيق تعليمي تفاعلي للأطفال (6-9 سنوات)
يتضمن ألعاب تعليمية في الرياضيات واللغة والمنطق
مع نظام تقييم مبدئي وتتبع التقدم وجمع النجوم

الباك إيند: PHP + MySQL (XAMPP)
الواجهة: Flutter (Dart)'''
}

// ---------------------------------------------------------------
//  1) جدول الأطفال (children)
//  الجدول الأساسي الذي يمثل كل طفل مسجّل في التطبيق
// ---------------------------------------------------------------
Table children {
  id          int [pk, increment, note: 'المعرّف الفريد - يُولّد تلقائياً (AUTO_INCREMENT)']
  name        varchar(100) [not null, note: 'اسم الطفل - مطلوب عند التسجيل']
  age         tinyint [not null, note: 'عمر الطفل (بالسنوات) - نطاق التطبيق: 6-9 سنوات - يُستخدم لفلترة الألعاب المناسبة']
  total_stars int [not null, default: 0, note: 'إجمالي النجوم المجمّعة - يُحدّث تلقائياً عند إكمال الألعاب (منطق Delta: يُضاف فقط الفرق لمنع التضخم عند إعادة اللعب)']
  created_at  timestamp [note: 'تاريخ إنشاء السجل - يُضبط تلقائياً عند الإدراج الأول (DEFAULT CURRENT_TIMESTAMP)']
  updated_at  timestamp [note: 'تاريخ آخر تحديث - يُحدّث تلقائياً عند أي تعديل على السجل (ON UPDATE CURRENT_TIMESTAMP)']

  indexes {
    id [pk]
  }

  note: 'جدول الأطفال - الجدول الأساسي في النظام
كل طفل لديه ملف شخصي لتتبع تقدمه في الألعاب ودرجاته
عند حذف طفل: تُحذف جميع سجلاته المرتبطة تلقائياً (CASCADE)
التحقق المطلوب: name و age إجباريان في API'
}

// ---------------------------------------------------------------
//  2) جدول المجالات (subjects)
//  المجالات التعليمية الثلاثة: رياضيات، لغة، منطق
// ---------------------------------------------------------------
Table subjects {
  id      int [pk, increment, note: 'المعرّف الفريد - يُولّد تلقائياً']
  code    varchar(20) [unique, not null, note: 'الكود التقني للمجال - فريد (UNIQUE) - القيم: math, language, logic - يُستخدم في الـ API بدلاً من الـ id']
  name_ar varchar(50) [not null, note: 'اسم المجال بالعربي للعرض في الواجهة - مثال: الرياضيات، اللغة، المنطق']

  indexes {
    id [pk]
    code [unique]
  }

  note: 'جدول المجالات التعليمية
يحتوي على 3 مجالات أساسية مُعرّفة مسبقاً (Seed Data):
- math: الرياضيات
- language: اللغة
- logic: المنطق
يُستخدم الـ code كمعرّف بديل في الـ API (وليس الـ id)'
}

// ---------------------------------------------------------------
//  3) جدول الألعاب (games)
//  كتالوج الألعاب التعليمية المتاحة
// ---------------------------------------------------------------
Table games {
  id         int [pk, increment, note: 'المعرّف الفريد - يُولّد تلقائياً']
  game_code  varchar(40) [unique, not null, note: 'الكود التقني للعبة - فريد (UNIQUE) - مثال: word_game, color_matching, addition_game - يُستخدم في game_progress']
  title_ar   varchar(100) [not null, note: 'عنوان اللعبة بالعربي للعرض في الواجهة - مثال: ترتيب الكلمات، مطابقة الألوان']
  subject_id int [not null, ref: > subjects.id, note: 'معرّف المجال التعليمي (FK → subjects.id) - يحدد أي مجال تنتمي إليه اللعبة - CASCADE عند حذف المجال']
  min_age    tinyint [not null, note: 'العمر الأدنى المطلوب للعبة (بالسنوات) - نطاق القيم: 6-9 - يُستخدم لفلترة الألعاب المناسبة لعمر الطفل']

  indexes {
    id [pk]
    game_code [unique]
    subject_id
  }

  note: 'كتالوج الألعاب التعليمية
كل لعبة تنتمي لمجال تعليمي واحد (رياضيات/لغة/منطق)
وتحدد عمرها الأدنى لفلترة المحتوى حسب عمر الطفل
الألعاب المُعرّفة مسبقاً (12 لعبة):
6 سنوات: ترتيب الكلمات، مطابقة الألوان، لعبة الجمع
7 سنوات: تكوين الجمل، مطابقة عربي-إنجليزي، رياضيات متقدمة
8 سنوات: تهجئة إنجليزية، مغامرة الرياضيات، توصيل الإعراب
9 سنوات: الرياضيات المتقاطعة، صائد الأخطاء، بناء الأسئلة'
}

// ---------------------------------------------------------------
//  4) جدول تقدّم الطفل في الألعاب (game_progress)
//  يسجل إنجاز كل طفل في كل لعبة
// ---------------------------------------------------------------
Table game_progress {
  id           int [pk, increment, note: 'المعرّف الفريد - يُولّد تلقائياً']
  child_id     int [not null, ref: > children.id, note: 'معرّف الطفل (FK → children.id) - يحدد أي طفل ينتمي هذا التقدم - CASCADE عند حذف الطفل']
  game_code    varchar(40) [not null, note: 'كود اللعبة (مرجع منطقي → games.game_code) - ملاحظة: لا يوجد FK رسمي في قاعدة البيانات - يُستخدم الـ game_code وليس الـ id']
  completed    boolean [not null, default: false, note: 'حالة إكمال اللعبة - false: لم تُكمل، true: أُكملت - يُضبط إلى true عند أول إنجاز']
  stars_earned int [not null, default: 0, note: 'عدد النجوم المكتسبة في هذه اللعبة - منطق GREATEST: لا يقل أبداً - يُحدّث فقط إذا كانت القيمة الجديدة أعلى']
  completed_at timestamp [null, note: 'تاريخ ووقت إكمال اللعبة - يُضبط عبر NOW() عند الإنجاز - NULL إذا لم تُكمل بعد']

  indexes {
    id [pk]
    (child_id, game_code) [unique, name: 'uq_child_game']
  }

  note: 'جدول تقدم الأطفال في الألعاب
سجل واحد لكل طفل + لعبة (UNIQUE على child_id + game_code)
منطق التحديث (UPSERT):
- INSERT إذا لم يكن هناك سجل سابق
- UPDATE إذا كان السجل موجوداً:
  * completed يصبح 1
  * stars_earned يأخذ القيمة الأعلى (GREATEST)
  * completed_at يُحدّث إلى NOW()
- إجمالي النجوم (total_stars) في جدول children يُحدّث فقط بالفرق (Delta) لمنع التضخم عند إعادة اللعب
ملاحظة مهمة: game_code هو مرجع منطقي وليس FK رسمي'
}

// ---------------------------------------------------------------
//  5) جدول درجات المجالات (child_scores)
//  درجة كل طفل في كل مجال تعليمي
// ---------------------------------------------------------------
Table child_scores {
  id         int [pk, increment, note: 'المعرّف الفريد - يُولّد تلقائياً']
  child_id   int [not null, ref: > children.id, note: 'معرّف الطفل (FK → children.id) - CASCADE عند حذف الطفل']
  subject_id int [not null, ref: > subjects.id, note: 'معرّف المجال التعليمي (FK → subjects.id) - CASCADE عند حذف المجال']
  score      int [not null, default: 0, note: 'الدرجة في هذا المجال - تُحدّث عبر UPSERT (استبدال كامل) - تتأثر بالتقييم المبدئي ولعب الألعاب']

  indexes {
    id [pk]
    (child_id, subject_id) [unique, name: 'uq_child_subject']
  }

  note: 'جدول درجات الأطفال في المجالات
سجل واحد لكل طفل + مجال (UNIQUE على child_id + subject_id)
جدول ارتباطي (Junction Table) بين children و subjects
مصادر الدرجات:
1. التقييم المبدئي (assessments) - يُحدّث تلقائياً عند إجراء التقييم
2. تحديث يدوي عبر API (PUT /scores/)
الدرجات تُستبدل بالكامل (وليس إضافة) عند التحديث'
}

// ---------------------------------------------------------------
//  6) جدول التقييمات المبدئية (assessments)
//  نتائج التقييم الأولي لكل طفل
// ---------------------------------------------------------------
Table assessments {
  id             int [pk, increment, note: 'المعرّف الفريد - يُولّد تلقائياً']
  child_id       int [not null, ref: > children.id, note: 'معرّف الطفل (FK → children.id) - CASCADE عند حذف الطفل']
  math_score     int [not null, default: 0, note: 'درجة الرياضيات في التقييم المبدئي']
  language_score int [not null, default: 0, note: 'درجة اللغة في التقييم المبدئي']
  logic_score    int [not null, default: 0, note: 'درجة المنطق في التقييم المبدئي']
  taken_at       timestamp [note: 'تاريخ ووقت إجراء التقييم - يُضبط تلقائياً عند الإدراج (DEFAULT CURRENT_TIMESTAMP)']

  indexes {
    id [pk]
    child_id
  }

  note: 'جدول التقييمات المبدئية
كل طفل يمكن أن يجري عدة تقييمات (سجل جديد لكل تقييم)
عند جلب التقييم: يُرجع آخر تقييم فقط (ORDER BY taken_at DESC LIMIT 1)
أثر جانبي مهم: إنشاء تقييم جديد يُحدّث تلقائياً درجات child_scores
للمجالات الثلاثة في نفس المعاملة (Transaction)'
}

// ---------------------------------------------------------------
//  العلاقات (References)
//  مُعرّفة أعلاه في كل جدول بالصيغة المختصرة
//  لكن نُضيفها هنا للوضوح أيضاً
// ---------------------------------------------------------------

// Ref: games.subject_id > subjects.id — onDelete: CASCADE
// "كل لعبة تنتمي لمجال تعليمي واحد"
// Ref: game_progress.child_id > children.id — onDelete: CASCADE
// "تتبع تقدم كل طفل"
// Ref: child_scores.child_id > children.id — onDelete: CASCADE
// "درجات كل طفل"
// Ref: child_scores.subject_id > subjects.id — onDelete: CASCADE
// "الدرجات لكل مجال"
// Ref: assessments.child_id > children.id — onDelete: CASCADE
// "تقييمات كل طفل"

// ---------------------------------------------------------------
//  ملاحظات عامة على قاعدة البيانات
// ---------------------------------------------------------------
Note database_notes {
  note: '''ملاحظات عامة على مخطط قاعدة البيانات EduFun:

1. محرك التخزين: InnoDB (يدعم العلاقات والمعاملات)
2. مجموعة الأحرف: utf8mb4 (يدعم Unicode الكامل بما فيها الإيموجي)
3. جميع العلاقات تستخدم ON DELETE CASCADE (حذف تتابعي)
4. نمط UPSERT شائع: ON DUPLICATE KEY UPDATE في game_progress و child_scores
5. المعاملات (Transactions) تُستخدم في: progress و scores و assessment
6. لا يوجد Soft Delete - الحذف نهائي
7. الأعمدة الزمنية: created_at و updated_at و taken_at و completed_at
8. game_progress.game_code مرجع منطقي فقط (بدون FK رسمي)
9. التقييم المبدئي له أثر جانبي: يُحدّث child_scores تلقائياً
10. منطق النجوم: Delta فقط (لا يُضاف عند إعادة اللعب إذا لم يتحسن)'''
}
